--- a/data_compressor_app/Makefile
+++ b/data_compressor_app/Makefile
@@ -123,32 +123,59 @@ data-compressor-app/fast:
 	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/build
 .PHONY : data-compressor-app/fast
 
-src/time_object.o: src/time_object.cpp.o
+src/main.o: src/main.c.o
+
+.PHONY : src/main.o
+
+# target to build an object file
+src/main.c.o:
+	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/main.c.o
+.PHONY : src/main.c.o
+
+src/main.i: src/main.c.i
+
+.PHONY : src/main.i
+
+# target to preprocess a source file
+src/main.c.i:
+	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/main.c.i
+.PHONY : src/main.c.i
+
+src/main.s: src/main.c.s
+
+.PHONY : src/main.s
+
+# target to generate assembly for a file
+src/main.c.s:
+	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/main.c.s
+.PHONY : src/main.c.s
+
+src/time_object.o: src/time_object.c.o
 
 .PHONY : src/time_object.o
 
 # target to build an object file
-src/time_object.cpp.o:
-	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/time_object.cpp.o
-.PHONY : src/time_object.cpp.o
+src/time_object.c.o:
+	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/time_object.c.o
+.PHONY : src/time_object.c.o
 
-src/time_object.i: src/time_object.cpp.i
+src/time_object.i: src/time_object.c.i
 
 .PHONY : src/time_object.i
 
 # target to preprocess a source file
-src/time_object.cpp.i:
-	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/time_object.cpp.i
-.PHONY : src/time_object.cpp.i
+src/time_object.c.i:
+	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/time_object.c.i
+.PHONY : src/time_object.c.i
 
-src/time_object.s: src/time_object.cpp.s
+src/time_object.s: src/time_object.c.s
 
 .PHONY : src/time_object.s
 
 # target to generate assembly for a file
-src/time_object.cpp.s:
-	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/time_object.cpp.s
-.PHONY : src/time_object.cpp.s
+src/time_object.c.s:
+	$(MAKE) -f CMakeFiles/data-compressor-app.dir/build.make CMakeFiles/data-compressor-app.dir/src/time_object.c.s
+.PHONY : src/time_object.c.s
 
 # Help Target
 help:
@@ -159,6 +186,9 @@ help:
 	@echo "... rebuild_cache"
 	@echo "... edit_cache"
 	@echo "... data-compressor-app"
+	@echo "... src/main.o"
+	@echo "... src/main.i"
+	@echo "... src/main.s"
 	@echo "... src/time_object.o"
 	@echo "... src/time_object.i"
 	@echo "... src/time_object.s"
