Added some metrics

--- a/data_compressor_app/CMakeLists.txt
+++ b/data_compressor_app/CMakeLists.txt
@@ -15,7 +15,7 @@ add_compile_options(-Wall -Wextra)
 find_package(anjay REQUIRED)
 # add_executable(${PROJECT_NAME} src/main.cpp)
 add_executable(${PROJECT_NAME}
-                src/main.c
-                src/time_object.h
-                src/time_object.c)
+                src_notify/main.c
+                src_notify/time_object.h
+                src_notify/time_object.c)
 target_link_libraries(${PROJECT_NAME} PRIVATE anjay)
