--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data_compressor_app/CMakeFiles
 data_compressor_app/data-compressor-app
 data_compressor_app/CMakeCache.txt
 data_compressor_app/cmake_install.cmake
+papers
